--- a/public/css/style-rtl.css
+++ b/public/css/style-rtl.css
@@ -3,7 +3,7 @@
 # General
 --------------------------------------------------------------*/
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Cairo', sans-serif;
   color: #272829;
 }
 
@@ -17,7 +17,9 @@ a:hover {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Raleway", sans-serif;
+  /* font-family: "Raleway", sans-serif; */
+  font-family: 'Cairo', sans-serif;
+  letter-spacing: -1px;
 }
 
 /*--------------------------------------------------------------
@@ -66,7 +68,7 @@ h1, h2, h3, h4, h5, h6 {
 #header {
   position: fixed;
   top: 0;
-  left: 0;
+  right: 0;
   bottom: 0;
   z-index: 9997;
   transition: all 0.5s;
@@ -79,13 +81,13 @@ h1, h2, h3, h4, h5, h6 {
     width: 300px;
     background: #fff;
     border-right: 1px solid #e6e9ec;
-    left: -300px;
+    left: 992px;
   }
 }
 
 @media (min-width: 992px) {
   #main {
-    margin-left: 100px;
+    margin-right: 100px;
   }
 }
 
@@ -94,6 +96,8 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 /* Desktop Navigation */
 .nav-menu * {
+  float: right;
+  clear: both;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -182,7 +186,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .mobile-nav-active #header {
-  left: 0;
+  left: 691px;
 }
 
 .mobile-nav-active .mobile-nav-toggle i {
@@ -218,11 +222,13 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero h1 {
   margin: 0;
-  margin-left: 33px;
-  font-size: 64px;
+  font-family: 'Cairo', sans-serif;
+  font-size: 49px;
   font-weight: 700;
+  letter-spacing: -1px;
   line-height: 56px;
   color: #45505b;
+  margin-left: 304px;
 }
 
 #hero p {
@@ -230,12 +236,12 @@ h1, h2, h3, h4, h5, h6 {
   margin: 15px 0 0 0;
   font-size: 26px;
   font-family: "Poppins", sans-serif;
-  margin-left:32px;
 }
 
 #hero p span {
   color: #0563bb;
   letter-spacing: 1px;
+  padding-left:350px;
 }
 
 #hero .social-links {
@@ -284,7 +290,9 @@ section {
 }
 
 .section-title h2 {
+  font-family: 'Cairo', sans-serif;
   font-size: 32px;
+  letter-spacing: -1px;
   font-weight: bold;
   text-transform: uppercase;
   margin-bottom: 20px;
@@ -381,7 +389,8 @@ section {
 .facts .count-box p {
   padding: 0;
   margin: 0;
-  font-family: "Raleway", sans-serif;
+  font-family: 'Cairo', sans-serif;
+  /* font-family: "Raleway", sans-serif; */
   font-size: 14px;
 }
 
@@ -530,6 +539,8 @@ section {
 .services .icon-box h4 a {
   color: #45505b;
   transition: ease-in-out 0.3s;
+  font-family: 'Cairo', sans-serif;
+  letter-spacing: -1px;
 }
 
 .services .icon-box p {
@@ -629,10 +640,12 @@ section {
 }
 
 #footer h3 {
+  font-family: 'Cairo', sans-serif;
   font-size: 36px;
   font-weight: 700;
   position: relative;
-  font-family: "Poppins", sans-serif;
+  /* font-family: "Poppins", sans-serif; */
+  letter-spacing: -1px;
   padding: 0;
   margin: 0 0 15px 0;
 }
@@ -671,6 +684,7 @@ section {
 
 #footer .copyright {
   margin: 0 0 5px 0;
+  float: left;
 }
 
 #footer .credits {
@@ -713,4 +727,8 @@ section {
 .love {
   font-size: 16px;
   text-align: right;
+}
+
+.about-asia {
+  margin-left: 505px;
 }
