--- a/public/css/style-rtl.css
+++ b/public/css/style-rtl.css
@@ -133,6 +133,10 @@ h1, h2, h3, h4, h5, h6 {
   color: #45505b;
 }
 
+#about > div > div.row > p {
+  margin: 10px;
+}
+
 @media (min-width: 992px) {
   .nav-menu a {
     width: 56px;
@@ -164,7 +168,7 @@ h1, h2, h3, h4, h5, h6 {
 /* Mobile Navigation */
 .mobile-nav-toggle {
   position: fixed;
-  right: 15px;
+  left: 15px;
   top: 15px;
   z-index: 9998;
   border: 0;
@@ -174,7 +178,7 @@ h1, h2, h3, h4, h5, h6 {
   outline: none !important;
   line-height: 1;
   cursor: pointer;
-  text-align: right;
+  text-align: left;
 }
 
 .mobile-nav-toggle i {
@@ -186,7 +190,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .mobile-nav-active #header {
-  left: 691px;
+  left: 60px;
 }
 
 .mobile-nav-active .mobile-nav-toggle i {
@@ -228,7 +232,7 @@ h1, h2, h3, h4, h5, h6 {
   letter-spacing: -1px;
   line-height: 56px;
   color: #45505b;
-  margin-left: 304px;
+  margin-left: 140px;
 }
 
 #hero p {
@@ -241,7 +245,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero p span {
   color: #0563bb;
   letter-spacing: 1px;
-  padding-left:350px;
+  padding-left: 287px;
 }
 
 #hero .social-links {
@@ -729,6 +733,71 @@ section {
   text-align: right;
 }
 
-.about-asia {
-  margin-left: 505px;
+
+.typed {
+  font-family: 'Cairo', sans-serif;
+}
+
+/* @media (max-width: 500px){
+  #hero h1 {
+    display: none;
+  }
+
+  #hero p {
+    display: none;
+  }
+} */
+
+@media (max-width: 538px ){
+  #hero {
+    width: 100%;
+    height: 100vh;
+    background: url("../img/cover_mobile.png") top right no-repeat;
+    background-size: cover;
+    position: relative;
+  }
+
+    #hero h1 {
+    font-size: 32px;
+    line-height: 36px;
+    position:relative;
+    bottom: 100px;
+    margin: 10px;
+  }
+
+    #hero p {
+    margin-top: 10px;
+    font-size: 20px;
+    line-height: 24px;
+    position:relative;
+    bottom: 100px;
+  }
+
+  #hero p span {
+  color: #0563bb;
+  letter-spacing: 1px;
+  padding-left: 121px;
+}
+.nav-menu * {
+/*   float: right; */
+/*   clear: both; */
+width: 100%;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+#header > nav > ul > li a span {
+  padding-left: 139px;
+}
+#header > nav > ul > li:nth-child(2) > a > span{
+  padding-left: 125px;
+}
+#header > nav > ul > li:nth-child(5) > a > span{
+  padding-left: 150px;
+
+}
+#header > nav > ul > li:nth-child(4) > a > span{
+  padding-left: 144px;
+
+}
 }
