--- a/public/css/style.css
+++ b/public/css/style.css
@@ -200,6 +200,13 @@ h1, h2, h3, h4, h5, h6 {
   position: relative;
 }
 
+#about > div > div.row > h4 {
+  margin: 10px;
+}
+#about > div > div.row > h3 {
+  margin: 10px;
+}
+
 @media (min-width: 992px) {
   #hero {
     padding-left: 160px;
@@ -219,7 +226,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero h1 {
   margin: 0;
   margin-left: 33px;
-  font-size: 64px;
+  font-size: 50px;
   font-weight: 700;
   line-height: 56px;
   color: #45505b;
@@ -713,4 +720,29 @@ section {
 .love {
   font-size: 16px;
   text-align: right;
+}
+
+@media (max-width: 538px ){
+  #hero {
+    width: 100%;
+    height: 100vh;
+    background: url("../img/cover_mobile.png") top right no-repeat;
+    background-size: cover;
+    position: relative;
+  }
+
+    #hero h1 {
+    font-size: 32px;
+    line-height: 36px;
+    position:relative;
+    bottom: 100px;
+  }
+
+    #hero p {
+    margin-top: 10px;
+    font-size: 20px;
+    line-height: 24px;
+    position:relative;
+    bottom: 100px;
+  }
 }
